feat(diagnosis): Improve candidate selection and data retrieval
- 후보 선택 및 데이터 조회 방식을 개선하여 코드 가독성을
  높였습니다.
- 'get(0)' 대신 'getFirst()' 메서드를 사용하여 첫 번째
  요소를 보다 명확하게 가져오도록 수정했습니다.